# crewai-trendingtopics

./: README.md  pyproject.toml
output/: curator.txt  publisher.txt  research.txt
src/trending_topics/: crew.py  main.py
src/trending_topics/config/: agents.yaml  tasks.yaml
