[project]
name = "trending_topics"
version = "0.1.0"
description = "trending_topics using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
trending_topics = "trending_topics.main:run"
run_crew = "trending_topics.main:run"
train = "trending_topics.main:train"
replay = "trending_topics.main:replay"
test = "trending_topics.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
